more alignments corrections

--- a/css/index.css
+++ b/css/index.css
@@ -260,7 +260,7 @@ a:visited {
     background-color: var(--grey);
     border-radius: 0.9rem;
     width: 70%;
-    padding: 0.8rem 0.8rem 0.8rem 0.8rem;
+    padding: 0.8rem 1rem 0.8rem 1rem;
 }
 
 #lodgingAncre {
@@ -283,7 +283,7 @@ a:visited {
     border-radius: 0.9rem;
     -webkit-box-shadow: 0.3rem 0.3rem 0.6rem lightGrey;
     box-shadow: 0.3rem 0.3rem 0.6rem lightGrey;
-    margin: 1% 1% 1% 0;
+    margin: 1% 1% 2% 0;
     padding: 0;
 }
 
@@ -328,7 +328,7 @@ a:visited {
     margin-left: 1.5%;
     font-size: 0.8rem;
     font-weight: bold;
-    line-height: 6em;
+    line-height: 3em;
 }
 
 /* Section 2 - part 2 : Top Results --------------------------------------------------------*/
@@ -349,14 +349,14 @@ a:visited {
     display: -ms-flexbox;
     display: flex;
     justify-content: space-between;
-    margin: 0.3rem 0.6rem 0.5rem 0.6rem;
+    margin: 0.3rem 0.6rem 0.5rem 1.6rem;
 }
 
 #iconTop {
     height: 0.8rem;
     width: auto;
-    padding: 0 0.6rem 0 0.6rem;
-    margin-top: 1.1rem;
+    padding: 0 1rem 0 0.6rem;
+    margin: 1.1rem 0 0 0;
 }
 
 .exempleResultsTop {
@@ -364,12 +364,13 @@ a:visited {
     background-color: white;
     -webkit-box-shadow: 0.3rem 0.3rem 0.6rem lightGrey;
     box-shadow: 0.3rem 0.3rem 0.6rem lightGrey;
-    margin: 0rem 0.6rem 1.2rem 0.6rem;
-    height: 30%;
+    margin: 0 1.5rem 0 1.5rem;
+    margin-bottom: 7%;
+    height: 25%;
 }
 
 .exempleResultsTop figure {
-    margin: 0.01rem;
+    margin: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -378,10 +379,10 @@ a:visited {
 .resultsTopPhoto {
     float: left;
     border-radius: 0.9rem 0 0 0.9rem;
-    width: 40%;
-    height: 9rem;
+    width: 35%;
+    height: 8rem;
     object-fit: cover;
-    margin: 2%;
+    margin: 1.5%;
 }
 
 .exempleResultsTop figcaption {
